# sentiment-production-pipeline

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  main.py  markdown-page.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/js/: 0e384e19.4cda3a0f.js  0e384e19.9150e28f.js  17896441.398c5615.js  1a61972c.3de3f093.js  1a61972c.78a44d2e.js  1be78505.942c9a37.js  1df93b7f.6ae0789c.js  1df93b7f.7801f08f.js  1f391b9e.2ed3212a.js  262.8b97d84e.js  393be207.d4781f75.js  3b8c55ea.2c58c48e.js  3b8c55ea.a4105c8c.js  3b8c55ea.a52c1ab3.js  3b8c55ea.a9c8a0d2.js  3b8c55ea.f491f0f8.js  3e7f9031.7373fd74.js  3e7f9031.81a15223.js  4ac6148f.757684ec.js  4d805074.87c2f253.js  5281b7a2.57cc0cea.js  5281b7a2.809113b8.js  5281b7a2.8e06987b.js  5281b7a2.d81289d0.js  5281b7a2.d977f4d6.js  53c84296.1e4b0f36.js  53c84296.de48d68f.js  53c84296.f8709e11.js  7c0b88e5.614b6dd4.js  8758f3c9.08fc2b6f.js  8758f3c9.435b0899.js  8758f3c9.97be8b42.js  935f2afb.3053663e.js  935f2afb.5a6f9cc1.js  935f2afb.90f9f6cb.js  935f2afb.b1a4c8b5.js  935f2afb.b84a9a56.js  a8ae9870.c518f329.js  bb7031b9.0627edc4.js  (+15 more)
docs/: api-usage.html  architecture.html  data-curation.html  dataset.html  docusaurus.config.js  evaluation.html  installation.html  intro.html  model-choices.html  package-lock.json  package.json  preprocessing.html  results.html  sidebars.js
notebooks/: EDA_IMDB.ipynb  EDA_Tweets.ipynb  Merge_IMDB_Tweets.ipynb  analysis.ipynb
src/api/: main.py  (+1 more)
tests/: test_preprocessing.py
(+22 files in other folders)
